@@ -1,3 +1,11 @@
+2009-10-08  Matthias Klose  <doko@ubuntu.com>
+
+	* Makefile.am (stamps/icedtea.stamp, stamps/icedtea-debug.stamp):
+	Add shark aliases to jvm.cfg.
+	(stamps/add-zero.stamp): Install as shark if default vm is zero.
+	* configure.ac: Allow shark as additional vm when default vm is zero.
+	* INSTALL, README: Document new build options.
+
 2009-10-06  Gary Benson  <gbenson@redhat.com>
 
 	* patches/icedtea-s390-serialize.patch: New file.
